kubernetes-networks/web-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc-lb
spec:
  selector:
    app: web
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
